# rpi5-gstreamer-testing

./: .gitignore  CMakeLists.txt  README.md
logs/: libcamera.txt
src/: camera_gstreamer.cpp  camera_gstreamer_gpu.cpp
